feat: search using form

--- a/views/details.pug
+++ b/views/details.pug
@@ -2,6 +2,6 @@ extends index
 
 block content
   p Welcome to Cat web app
-  div funciona pfv: #{id}
-  div Raça topzera: #{name}
+  div Cat id: #{id}
+  div Breed: #{name}
   img(height='250px' width='250px' src=imageUrl) 
