--- a/src/public/styles/style.css
+++ b/src/public/styles/style.css
@@ -8,8 +8,15 @@
 }
 
 .catCard{
-    margin-right: 10px;
-    margin-left: 10px;
+    padding: 16px; 
+    box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
+    transition: 0.3s;
+    padding: 16px 16px;
+    margin: 8px;
+}
+
+.catCard:hover{
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
 .header{
@@ -27,4 +34,8 @@
 .searchContainer{
     display: flex;
     align-items: center;
+}
+
+.checked {
+    color: orange;
 }
