--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -13,7 +13,7 @@ html
     div.searchContainer
       form(method='get' action='/cats')
         div.form-group
-          input.form-control(type='text' id='breed' placeholder= 'Search for a cat breed :)' name='breed')
+          input.form-control(type='text' id='breedName' placeholder= 'Search for a cat breed :)' name='breedName')
           button.btn.btn-primary(type='submit') Search Breed!      
   body
     block content
