--- a/src/views/searchResult.pug
+++ b/src/views/searchResult.pug
@@ -4,7 +4,7 @@ block content
   container.container
     div.catsRow 
       each cat in cats
-        container.catCard
-          div #{cat.breed.name}
-          a(href=cat.view.redirectPath)
-            img(src=cat.imageUrl).img
+        a(href=cat.view.redirectPath)
+          div.catCard
+            img(src=cat.imageUrl).catCardImg
+            div.catCardName #{cat.breed.name}          
