--- a/src/public/styles/style.css
+++ b/src/public/styles/style.css
@@ -1,41 +1,224 @@
+html{
+	font-family: Verdana;
+}
+
+@media (max-width:480px){
+	.logoResponsive{
+		display: flex;
+		align-content: center;
+		justify-content: center;
+		align-items: center;
+		width: 100%;
+		margin-bottom: 16px;
+	}
+	.searchResponsive{
+		display: flex;
+		align-content: center;
+		justify-content: center;
+		align-items: center;
+		width: 100%;
+		margin-bottom: 16px;
+	}
+}
+.logo{
+	height: 80px;
+}
+
 .catsRow{
     display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
-    align-content: space-around;
     justify-content: center;
-    align-items: flex-start;
+		margin-top: 16px;
 }
 
 .catCard{
-    padding: 16px; 
-    box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
-    transition: 0.3s;
-    padding: 16px 16px;
-    margin: 8px;
+	box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
+	transition: 0.3s;
+	margin: 8px;
+	text-decoration: none;
+	border-radius: 12px;
+	background-color: #342c2c;
+}
+
+.catCardImg{
+  width: 370px;
+	height: 300px;
+	border-top-left-radius: 12px;
+	border-top-right-radius: 12px;
+	object-fit: cover;
+}
+
+.catCardName{
+	font-size: 20px;
+	padding: 8px 16px;
+	color: #cfcece;
+}
+
+a, a:hover, a:visited, a:link, a:active{
+	text-decoration: none;
+	color: unset;
 }
 
 .catCard:hover{
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
-.header{
+header{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 24px;
+		background-color: #d1c7c7;
 }
 
-.img{
-    width: 500px;
-    height: 400px;
-}
+
 
 .searchContainer{
     display: flex;
-    align-items: center;
+    align-items: center;		
+}
+
+.searchContainer input{
+	height: 32px;
+	border-radius: 16px;
+	padding: 0px 8px;
+	margin-right: 8px;
+	border: 2px solid #342c2c;
+}
+
+.searchContainer button{
+	height: 32px;
+	border-radius: 16px;
+	padding: 0px 12px;
+	margin-right: 8px;
+	border: 2px solid #342c2c;
+	background-color: #342c2c;
+	color: #fff;
+	font-weight: bold;
+	cursor: pointer;
+
 }
 
 .checked {
     color: orange;
+}
+
+.greenChecked {
+	color: green;
+}
+
+.grayChecked {
+	color: gray;
+}
+
+body{
+    margin: 0px;
+    padding: 0px;
+		background-color: #e1dfdf;
+}
+
+.detailsBody{
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	flex-wrap: nowrap;
+}
+
+
+@media (min-width:320px){
+	.bigCatCardImg{
+		width: 300px;
+		height: 400px;
+		border-top-left-radius: 12px;
+		border-top-right-radius: 12px;
+		object-fit: cover;
+	}
+	.bigCatCard{
+		box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
+		border-top-left-radius: 12px;
+		border-top-right-radius: 12px;
+		width: 300px;
+		margin: 24px 0px;
+		background-color: white;
+	}
+	.bigCardCardResumeFields{
+		padding: 4px 0px;
+		width: 130px
+	}
+}
+
+@media (min-width:600px){
+	.bigCatCardImg{
+		width: 400px;
+		height: 400px;
+		border-top-left-radius: 12px;
+		border-top-right-radius: 12px;
+		object-fit: cover;
+	}
+	.bigCatCard{
+		box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
+		border-top-left-radius: 12px;
+		border-top-right-radius: 12px;
+		width: 400px;
+		margin: 24px 0px;
+		background-color: white;
+	}
+	.bigCardCardResumeFields{
+		padding: 4px 0px;
+		width: 200px
+	}
+}
+
+@media (min-width:1025px){
+	.bigCatCardImg{
+		width: 900px;
+		height: 600px;
+		border-top-left-radius: 12px;
+		border-top-right-radius: 12px;
+		object-fit: fill;
+	}
+	.bigCatCard{
+		box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
+		border-top-left-radius: 12px;
+		border-top-right-radius: 12px;
+		width: 900px;
+		margin: 24px 0px;
+		background-color: white;
+	}
+	.bigCardCardResumeFields{
+		padding: 4px 0px;
+		width: 600px
+	}
+}
+
+.bigCatCardResume{
+	padding: 16px;
+}
+
+.bigCatCardResumeLine{
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.bigCardCardResumeHeader{
+	padding: 4px 0px;
+}
+
+.fakeButton{
+	height: 32px;
+	border-radius: 16px;
+	border: 2px solid #342c2c;
+	background-color: #342c2c;
+	color: #fff;
+	font-weight: bold;
+	width: 100px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.notFoundBody{
+	display: flex;
+	justify-content: center;
+	margin-top: 16px
 }
