--- a/src/views/notFound.pug
+++ b/src/views/notFound.pug
@@ -1,5 +1,5 @@
 extends index
 
 block content
-  p Not found :(
-  img(src="https://http.cat/404")
+  div.notFoundBody
+    img(src="https://http.cat/404")
